# ai-assets

./: .gitignore  .skaile-source.yaml  CLAUDE.md  README.md  REVIEW.md  package.json  skaile.yaml
.githooks/: commit-msg  pre-commit
_devlog/: 2026-03-22_cleanup-orchestrators-renames.md  TODO_PESTER.md
ai-asset-management/: CHANGELOG.md  DOMAIN.md  ai-asset-management.bundle.yaml
ai-resource-management/: CHANGELOG.md  DOMAIN.md  ai-resource-management.bundle.yaml  ai-resource-management.skillpack.yaml
business-expert-logistics/: package.json  pnpm-lock.yaml  radensleben-transporte.md  slides.md  style.css
business-gtm/: deck_design_spec.md  deck_partner_content.md  narrative_arcs.md  pain_narrative.md  pitch_audiences.md  skill_pipeline_examples.md
business-strategy/: competitive_moat.md  market.md  pricing.md  status_validation.md
catalogs/: build-pipeline.catalog.yaml  build.ts  catalog.entry.schema.json  catalog.manifest.schema.json  core.catalog.yaml  dev-workflow.catalog.yaml  experts-js.catalog.yaml  experts-python.catalog.yaml  testing.catalog.yaml
dev-architecture/: CHANGELOG.md  DOMAIN.md  dev-architecture.bundle.yaml  package.yaml
dev-conceptualization/: CHANGELOG.md  DOMAIN.md  dev-conceptualization.bundle.yaml  package.yaml
dev-implementation-experts-js/: CHANGELOG.md  DOMAIN.md  dev-implementation-experts-js.bundle.yaml  package.yaml
dev-implementation-experts-python/: CHANGELOG.md  DOMAIN.md  package.yaml  (+1 more)
use/skills/use-context7-api/: README.md  SKILL.md  pyproject.toml
use/skills/use-context7-api/src/use_context7_api/: cli.py
(+1604 files in other folders)
