[project]
name = "use-context7-api"
version = "1.0.0"
description = "CLI tool for accessing Context7 REST API directly"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Developer", email = "dev@example.com" }]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
use-context7-api = "use_context7_api.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
